fix spacing in categories section

--- a/css/styles.css
+++ b/css/styles.css
@@ -872,7 +872,7 @@ header {
   }
 
   .categories-section {
-    width: 75%;
+    width: 73%;
     margin: 0 auto;
   }
 }
